fix header alignment

--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -36,6 +36,10 @@
   display: block;
 }
 
+.homeIcon {
+  margin-top: 5px;
+}
+
 @media (max-width: 768px) {
   .link:hover::after {
     display: none;
